--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "nodeapi",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,7 +21,19 @@
     "moment": "^2.29.4",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
+    "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
-    "validator": "^13.9.0"
+    "ts-node": "^8.10.1",
+    "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/socket.io": "^3.0.2",
+    "@types/validator": "^13.11.1",
+    "typescript": "^5.1.6"
   }
 }
